# PacketForge

./: .gitignore  README.md  SECURITY.md  conftest.py  pyproject.toml
docs/: IMPROVEMENT_PLAN.md  RESEARCH_NOTES.md  TESTING.md
packaging/: build_linux.sh  build_macos.sh  packetforge.spec  packetforge_launcher.py
packetforge/: __init__.py  app.py  diagnostics.py  errors.py  main.py  qt_bootstrap.py
packetforge/assets/: __init__.py
packetforge/engine/: __init__.py  builder.py  discovery.py  environment.py  fingerprint.py  fingerprint_probe.py  history.py  interfaces.py  merge.py  observability.py  ping_engine.py  ports.py  sample_data.py  sender.py  simulation.py  statistics.py  subnets.py  targets.py  topology.py
packetforge/engine/protocols/: __init__.py  bgp.py  dhcp.py  dns.py  ntp.py  ospf.py  smtp.py  snmp.py  stp.py
packetforge/models/: __init__.py  discovery.py  observability.py  packet.py  ping.py  preset.py  profiles.py  results.py
packetforge/presets/: __init__.py  builtins.py  storage.py
packetforge/security/: __init__.py  command_policy.py  privileges.py  rate_limit.py  safe_scapy.py
packetforge/ui/: __init__.py  charts.py  main_window.py  preferences.py  state.py  workers.py
packetforge/ui/help/: __init__.py  topics.py
packetforge/ui/tabs/: __init__.py  console.py  dashboard.py  diagnostics.py  discovery_center.py  environment.py  fingerprinting.py  history.py  network_map.py  observability.py  packet_builder.py  ping_lab.py  placeholders.py  protocol_troubleshooter.py  settings.py  simulation.py
packetforge/ui/widgets/: data_table.py  empty_state.py  error_banner.py  form_helpers.py  help_dialog.py  host_detail.py  interface_combo.py  page_header.py  persistent_splitter.py  topology_view.py  transmission_form.py
packetforge/utils/: __init__.py  export.py  formatting.py  packet_size.py
scripts/: fix_venv.sh
tests/: conftest.py  test_builder.py  test_data_table.py  test_diagnostics.py  test_discovery_engine.py  test_environment.py  test_errors.py  test_export.py  test_fingerprint.py  test_gui_smoke.py  test_help.py  test_history.py  test_interface_combo.py  test_launcher.py  test_merge.py  test_observability.py  test_packet_builder.py  test_packet_sizes.py  test_ping_statistics.py  test_ping_statistics_edge.py  test_ports.py  test_presets.py  test_profiles.py  test_protocol_parsing.py  test_protocols.py  test_qt_bootstrap.py  test_safe_scapy.py  test_safe_scapy_rules.py  test_security.py  test_simulation.py  test_subnets.py  test_targets.py  test_ui_tabs.py  test_workers.py
